assets/infrastructure/manifests/cfk/plaintext/controlcenter-HTTPRoute.yaml
---
# TODO: This is untested
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: controlcenter
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
    sectionName: https-terminate
  hostnames:
  - "confluent.${BASE_INT_DOMAIN}"
  rules:
  - backendRefs:
    - name: controlcenter-0-internal
      # HTTP (not HTTPS) port because we terminate on Envoy Gateway
      port: 9021
