assets/infrastructure/manifests/cfk/plaintext/kafka-HTTPRoute.yaml
---
# This is probably completely broken; we need a listener for each broker
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kafka
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
    sectionName: https-terminate
  hostnames:
  - "kafka.${BASE_PUBLIC_HTTPS_DOMAIN}"
  rules:
  - backendRefs:
    - name: kafka-bootstrap
      port: 9092
