assets/infrastructure/manifests/cfk/plaintext/schemaregistry-HTTPRoute.yaml
---
# TODO: This is untested
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: schemaregistry
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
    sectionName: https-terminate
  hostnames:
  - "schemaregistry.${BASE_PUBLIC_HTTPS_DOMAIN}"
  rules:
  - backendRefs:
    - name: schemaregistry-0-internal
      # HTTP (not HTTPS) port because we terminate on Envoy Gateway
      port: 8081
